_sources/autoapi/bcf/v2/model/markup/index.rst.txt
:py:mod:`bcf.v2.model.markup`
=============================

.. py:module:: bcf.v2.model.markup


Module Contents
---------------

.. py:class:: BimSnippet

   .. py:attribute:: is_external
      :type:  bool
      :value: False



   .. py:attribute:: reference
      :type:  str


   .. py:attribute:: reference_schema
      :type:  str


   .. py:attribute:: snippet_type
      :type:  str


.. py:class:: Comment

   .. py:attribute:: author
      :type:  str


   .. py:attribute:: comment
      :type:  str


   .. py:attribute:: date
      :type:  xsdata.models.datatype.XmlDateTime


   .. py:attribute:: guid
      :type:  str


   .. py:attribute:: modified_author
      :type:  Optional[str]
      :value: None



   .. py:attribute:: modified_date
      :type:  Optional[xsdata.models.datatype.XmlDateTime]
      :value: None



   .. py:attribute:: viewpoint
      :type:  Optional[CommentViewpoint]
      :value: None



.. py:class:: CommentViewpoint

   .. py:class:: Meta

      .. py:attribute:: global_type
         :value: False




   .. py:attribute:: guid
      :type:  str


.. py:class:: Header

   .. py:attribute:: file
      :type:  list[HeaderFile]
      :value: []



.. py:class:: HeaderFile

   .. py:class:: Meta

      .. py:attribute:: global_type
         :value: False




   .. py:attribute:: date
      :type:  Optional[xsdata.models.datatype.XmlDateTime]
      :value: None



   .. py:attribute:: filename
      :type:  Optional[str]
      :value: None



   .. py:attribute:: ifc_project
      :type:  Optional[str]
      :value: None



   .. py:attribute:: ifc_spatial_structure_element
      :type:  Optional[str]
      :value: None



   .. py:attribute:: is_external
      :type:  bool
      :value: True



   .. py:attribute:: reference
      :type:  Optional[str]
      :value: None



.. py:class:: Markup

   .. py:attribute:: comment
      :type:  list[Comment]
      :value: []



   .. py:attribute:: header
      :type:  Optional[Header]
      :value: None



   .. py:attribute:: topic
      :type:  Topic


   .. py:attribute:: viewpoints
      :type:  list[ViewPoint]
      :value: []



.. py:class:: Topic

   .. py:attribute:: assigned_to
      :type:  Optional[str]
      :value: None



   .. py:attribute:: bim_snippet
      :type:  Optional[BimSnippet]
      :value: None



   .. py:attribute:: creation_author
      :type:  str


   .. py:attribute:: creation_date
      :type:  xsdata.models.datatype.XmlDateTime


   .. py:attribute:: description
      :type:  Optional[str]
      :value: None



   .. py:attribute:: document_reference
      :type:  list[TopicDocumentReference]
      :value: []



   .. py:attribute:: due_date
      :type:  Optional[xsdata.models.datatype.XmlDateTime]
      :value: None



   .. py:attribute:: guid
      :type:  str


   .. py:attribute:: index
      :type:  Optional[int]
      :value: None



   .. py:attribute:: labels
      :type:  list[str]
      :value: []



   .. py:attribute:: modified_author
      :type:  Optional[str]
      :value: None



   .. py:attribute:: modified_date
      :type:  Optional[xsdata.models.datatype.XmlDateTime]
      :value: None



   .. py:attribute:: priority
      :type:  Optional[str]
      :value: None



   .. py:attribute:: reference_link
      :type:  list[str]
      :value: []



   .. py:attribute:: related_topic
      :type:  list[TopicRelatedTopic]
      :value: []



   .. py:attribute:: stage
      :type:  Optional[str]
      :value: None



   .. py:attribute:: title
      :type:  str


   .. py:attribute:: topic_status
      :type:  Optional[str]
      :value: None



   .. py:attribute:: topic_type
      :type:  Optional[str]
      :value: None



.. py:class:: TopicDocumentReference

   .. py:class:: Meta

      .. py:attribute:: global_type
         :value: False




   .. py:attribute:: description
      :type:  Optional[str]
      :value: None



   .. py:attribute:: guid
      :type:  Optional[str]
      :value: None



   .. py:attribute:: is_external
      :type:  bool
      :value: False



   .. py:attribute:: referenced_document
      :type:  Optional[str]
      :value: None



.. py:class:: TopicRelatedTopic

   .. py:class:: Meta

      .. py:attribute:: global_type
         :value: False




   .. py:attribute:: guid
      :type:  str


.. py:class:: ViewPoint

   .. py:attribute:: guid
      :type:  str


   .. py:attribute:: index
      :type:  Optional[int]
      :value: None



   .. py:attribute:: snapshot
      :type:  Optional[str]
      :value: None



   .. py:attribute:: viewpoint
      :type:  Optional[str]
      :value: None



.. py:data:: DATACLASS_KWARGS

